--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <p class="pink-bckgrnd">Number 1 - I'm a class!</p>
-    <div id="id">Number 2 - I'm one ID.</div>
-    <p class="pink-bckgrnd cooler">Number 3 - I'm a class, but cooler!</p>
-    <div class="another">Number 4 - I'm another ID.</div>
+    <div id="two">Number 2 - I'm one ID.</div>
+    <p class="pink-bckgrnd adjust-font-size">Number 3 - I'm a class, but cooler!</p>
+    <div id="four" class="adjust-font-size">Number 4 - I'm another ID.</div>
     <p class="pink-bckgrnd">Number 5 - I'm a class!</p>
   </body>
 </html>
